k8s/clockify/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: clockify
  name: clockify
  namespace: clockify
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: clockify
  sessionAffinity: None
  type: ClusterIP
