k8s/clockify/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: clockify
  namespace: istio-system
  labels:
    app: clockify
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "https://auth.charlieegan3.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.charlieegan3.com/oauth2/start?rd=https://clockify.charlieegan3.com"
    nginx.ingress.kubernetes.io/upstream-vhost: clockify.clockify.charlieegan3.com
spec:
  tls:
  - hosts:
    - clockify.charlieegan3.com
    secretName: clockify-tls
  rules:
  - host: clockify.charlieegan3.com
    http:
      paths:
      - path: /
        backend:
          serviceName: istio-ingressgateway
          servicePort: 80
